--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     ]
   },
   "devDependencies": {
-    "babel-eslint": "^10.0.3"
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.7.2",
+    "eslint-plugin-react": "^7.17.0"
   }
 }
